// Enum for User Roles
public enum UserRole {
    PATIENT,
    DOCTOR,
    PHARMACIST,
    ADMINISTRATOR
}